fix consultation_wrap block

--- a/local/templates/kontur.remontkvartir/template_styles.css
+++ b/local/templates/kontur.remontkvartir/template_styles.css
@@ -1325,9 +1325,20 @@ ul, ol {
   margin-bottom: 105px;
 }
 .consultation {
+  position: relative;
   height: 710px;
-  background: url('./images/consultation.png') no-repeat center/cover;
 }
+.consultation img:not(.iphone){
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: 1;
+}
+
 .consultation__box {
   max-width: 1260px;
   width: 100%;
@@ -1349,6 +1360,7 @@ ul, ol {
           transform: translateY(100%);
   -webkit-transition: all 0.8s ease;
   transition: all 0.8s ease;
+  z-index: 2;
 }
 .consultation:hover .consultation__box .iphone {
   -webkit-transform: translateY(0);
@@ -1357,6 +1369,7 @@ ul, ol {
 .consultation__left {
   width: 415px;
   margin-right: 29px;
+  z-index: 2;
 }
 .consultation__left .title {
   font-weight: 700;
@@ -1395,6 +1408,7 @@ ul, ol {
   width: 375px;
   padding: 61px 60px 54px 60px;
   background: #FFFFFF;
+  z-index: 2;
 }
 .consultation__form .input {
   margin-bottom: 15px;
